--- a/css/css.css
+++ b/css/css.css
@@ -3,9 +3,10 @@
     font-size: 12px;
     color: #ffffff;
     margin: 5px;
-    background: #ffffff;
+    background: #e7e6e6;
     min-width: 400px;
     width: 100%;
+   
    }
   h1 {
     font-size: 18px;
@@ -248,10 +249,10 @@ display: block;
 }
 
 .temp_show {
-  color: #ffffff;
+  color: #3711de;
   display: flex;
   position: space-between;
-  font-size: 48px;
+  font-size: 64px;
   text-align: center;
   padding: 5px;
   border-radius: 3px;
