--- a/css/css.css
+++ b/css/css.css
@@ -44,15 +44,15 @@
   }
   th {
     font-size: 11px;
-    max-width: 100px;
+    width: 50px;
     background: rgb(118,156,236);
-    text-align: center;
+    text-align: left;
     padding: 5px;
     border-radius: 3px 0px 0px 3px;
     width: 100%;
   }
   td {
-    max-width: 100px;
+    width: 25px;
     font-size: 11px;
     background: #768cec;
     padding: 5px;
@@ -231,7 +231,7 @@ display: block;
     margin-top: 20px;
    
 }
-._dados
+._dados 
 {
     display:block;
     width: 1200px;
@@ -243,6 +243,14 @@ display: block;
     border-radius: 10px;
     padding: 10px; 
    
+}
+
+.thead th td 
+{
+max-width: 35px;
+background-color: rgb(120,160,236);
+
+
 }
 
 .Info__Response
