--- a/css/css.css
+++ b/css/css.css
@@ -185,61 +185,106 @@ img
     padding: 20px; 
    
 }
-.autenticacao 
+.autenticacao
 {
+  width: 100vw;
+  height: 100vh;
+ 
+  display: flex;
   align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(45deg, cyan, blue);
+
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  transition: 0,75;
+  font-weight: 600;
   font-size: 18px;
-  color: #333333;
+  color: #072f4e;;
   text-align: center;
-  padding: 5px;
-  border-radius: 3px;
+
+  border: none;
+  box-shadow: 10px 10px 35px -6px #148eee;;
+}
+
+.box
+{
+  background-color: rgba(200,200,200,0.6);
+  width: 350px;
+  height: 325px;
+  
+  border-radius: 10px;
+  flex-direction: row;
+  padding: 20px 20px 10px 10px;
+  box-shadow: 10px 10px 35px -6px #148eee;;
 }
 
 .autenticacao img
 {
 height: 50;
 width: 50;
+box-shadow: 5px 13px 6px -6px #148eee
 }
 
 .autenticacao input
 {
   align-items: center;
-  background-color: #043f7e;
-  font-weight: 500;
-  font-size: 18px;
-  color: #ffffff;
+  background-color: #dddddd;
+  font-weight: 600;
+  font-size: 12px;
+  color: #148eee;
   text-align: center;
-  padding: 5px;
-  border-radius: 18px;
+  padding: 5px 15px;
+  border-radius: 6px;
+  border: bottom;
+  box-shadow: 5px 10px 6px -6px #148eee;
+
   
 }
 .autenticacao button
 {
   align-items: center;
-  background-color: #043f7e;
-  font-weight: 500;
-  font-size: 18px;
-  color: #ffff;
+  background-color: #dddfe0;
+  font-weight: 600;
+  font-size: 12px;
+  color: #148eee;;
   text-align: center;
-  padding: 8px;
-  border-radius: 18px;
-  border: 0;
+  padding: 10px 25px;
+  cursor: pointer;
+
+  border-radius: 6px;
+  border: none;
+  box-shadow: 5px 13px 6px -6px #148eee;;
+}
+
+.autenticacao button:hover
+{
+background-color: deepskyblue;
+color: blue;
+
 }
 .cad
 {
 align-items: center;
-display: flex;
-justify-content: space-between;
-background-color: rgb(100, 104, 200);
+display: inline-block;
+justify-content:flex-end;
+background-color: rgb(202, 202, 205);
+box-shadow: 0px 13px 35px -6px #0f0874;;
 
 }
 
 .cad button
 {
-background-color: #000000;
-color:rgb(2, 157, 199)
+
+color:#ffffff;
+border: none;
+align-items: center;
+background-color:#787878;
 
 }
+
+
 .chart
 {
     align-items: center;
