--- a/css/css.css
+++ b/css/css.css
@@ -205,7 +205,7 @@ img
   text-align: center;
 
   border: none;
-  box-shadow: 10px 10px 35px -6px #148eee;;
+  box-shadow: 10px 10px 35px -6px #148eee;
 }
 
 .box
@@ -255,7 +255,7 @@ box-shadow: 5px 13px 6px -6px #148eee
 
   border-radius: 6px;
   border: none;
-  box-shadow: 5px 13px 6px -6px #148eee;;
+  box-shadow: 5px 13px 6px -6px #148eee;
 }
 
 .autenticacao button:hover
@@ -266,24 +266,85 @@ color: blue;
 }
 .cad
 {
-align-items: center;
-display: inline-block;
-justify-content:flex-end;
-background-color: rgb(202, 202, 205);
-box-shadow: 0px 13px 35px -6px #0f0874;;
+  width: 100vw;
+  height: 500px;
+ 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(45deg, cyan, blue);
 
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+
+  border: none;
+  box-shadow: 10px 10px 35px -6px #148eee;
 }
-
 .cad button
 {
+  align-items: center;
+  background-color: #dddfe0;
+  font-weight: 600;
+  font-size: 12px;
+  color: #148eee;
+  text-align: center;
+  padding: 5px 20px;
+  margin: 5px;
+  cursor: pointer;
 
-color:#ffffff;
-border: none;
-align-items: center;
-background-color:#787878;
+  border-radius: 6px;
+  border: none;
+  box-shadow: 5px 13px 6px -6px #148eee;
+}
+.cad input{
+  align-items: center;
+  background-color: #dddddd;
+  font-weight: 600;
+  font-size: 12px;
+  color: #148eee;
+  text-align: center;
+  padding: 5px 15px;
+  margin-top: 10px;
+  border-radius: 6px;
+  border: bottom;
+  box-shadow: 5px 10px 6px -6px #148eee;
+}
+
+.cad label{
+  font-family: Arial, Helvetica, sans-serif;
+  align-items: center;
+  font-size: 18px;
+  border-radius: 6px;
+  padding: 5px;
+  margin: 20px 20px 10px 10px;
+  color: lightgray;
+  background-color: gray;
 
 }
 
+.cad .box_cad{
+  height: 400px;
+  width: 300px;
+  margin: 20px 20px 10px 10px;
+  align-items: center;
+  border-radius: 10px;
+  padding: 20px 20px 10px 10px;
+  background-color: rgb(202, 202, 205);
+  box-shadow: 0px 13px 35px -6px #0f0874;;
+
+}
+
+.cad .box_control{
+  height: 400px;
+  width: 300px;
+  align-items: center;
+  border-radius: 10px;
+  margin: 20px 20px 10px 10px;
+  padding: 20px 20px 10px 10px;
+  background-color: rgb(202, 202, 205);
+  box-shadow: 0px 13px 35px -6px #0f0874;;
+
+}
 
 .chart
 {
