--- a/css/css.css
+++ b/css/css.css
@@ -12,7 +12,7 @@
     font-size: 18px;
     text-align: center;
     color: #ffffff;
-    background: #787878;
+    background: rgb(85, 85, 150);
     border-radius: 7px 7px 0px 0px;
     padding: 7px 4px 0px 4px;
     margin: 0px;
@@ -38,28 +38,32 @@
   }
 
   table {
-    display: block;
-    width: 100%;
+     width: 600px;
+    display: flex;
+    width: 50%;
     margin-top: 20px;
     padding: 5px;
-    justify-content: space-between;
+    text-align: center;
     align-items: center;
   }
   th {
-    font-size: 11px;
-    width: 50px;
-    background: rgb(118,156,236);
-    text-align: left;
-    padding: 5px;
-    border-radius: 3px 0px 0px 3px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: 16px;
     width: 100%;
+    color: #ffff;
+    background: gray;
+    text-align: center;
+    padding: 10px;
+    border-radius: 3px 0px 0px 3px;
+  
   }
   td {
     width: 25px;
-    font-size: 11px;
+    font-size: 12px;
     background: #768cec;
     padding: 5px;
-    border-radius: 0px 3px 3px 0px;
+   
   }
   a {
     font-size: 12px;
@@ -103,6 +107,7 @@
  max-width: 1200px;
  margin: auto 20px auto 20px;
  border-radius: 3px;
+ background-image: linear-gradient(45deg, cyan, blue);
 }
 
 .botao_home
@@ -136,11 +141,12 @@
     justify-content: space-between;
     
     color:rgb(117, 129, 238);
-    background-color: rgba(120,140,255);
+
     font-size:1.0em;
     padding: 10px 60px;
     margin-top: 10px;
     border-radius: 3px;
+    background-image: linear-gradient(45deg, cyan, blue);
 }
 
 .Botoes__pagina0 IMG
@@ -156,10 +162,11 @@ img
 .img_kit img
 {
   align-items: center;
+  justify-content: center;
   display: flex;
+  position: center;
   width: 600px;
   height: 300px;
-
 }
 
 .botãochart
@@ -395,24 +402,6 @@ display: block;
  border-radius: 3px;
 }
 
-.dados
-{
-    display: flex;
-    align-items: center;
-    margin-top: 20px;
-}
-._dados 
-{
-    display:block;
-    width: 1200px;
-    height: 300px;
-    background-color: rgb(120,160,236);
-    position: relative;
-    float: left;
-    margin-top: 20px;
-    border-radius: 10px;
-    padding: 10px; 
-}
 
 .thead th td 
 {
@@ -420,18 +409,6 @@ max-width: 35px;
 background-color: rgb(120,160,236);
 }
 
-.Info__Response
-{
-    background-color: rgb(2, 157, 199);
-    width: 1200px;
-    margin: 10px auto 10px 150px;
-}
-
-.headerSession
-{
-    color:rgb(78, 86, 199);
-    font-size:1.0em;
-}
 
 .temp_show {
   color: #3711de;
