--- a/css/css.css
+++ b/css/css.css
@@ -31,18 +31,18 @@
     text-align: left;
     font-weight: normal;
     background: #ffffff;
-    padding: 7px;
-    margin: 0px;
+    padding: 20px;
+    margin: 20px;
     border: #787878 solid 2px;
-    border-radius: 0px 0px 7px 7px;
+    border-radius: 10px;
   }
 
-  table {
-     width: 600px;
-    display: flex;
-    width: 50%;
+  .table {
+    width: 100%;
+    max-width:60px;
+    display: inline-flexbox;
     margin-top: 20px;
-    padding: 5px;
+    padding: 20px;
     text-align: center;
     align-items: center;
   }
@@ -114,51 +114,51 @@
 {
     display: flex;
     border-radius: 10px;
-    width: 800px;
+    width: 100%;
+    max-width: 1200px;
     height: 200px;
     
     position: space-between;
-  
-    margin-top: 10px;
+    margin: auto 20px auto 20px;;
     padding: 5px; 
 }
 .home_btn
 {
   display: flex;
   margin-top: 5px;
-
 }
+
 .secao__Botoes {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin: 20px;
   }
-
 
 .Botoes__pagina0
 {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
     
-    color:rgb(117, 129, 238);
-
-    font-size:1.0em;
-    padding: 10px 60px;
-    margin-top: 10px;
-    border-radius: 3px;
-    background-image: linear-gradient(45deg, cyan, blue);
+  width: 100%;
+  max-width: 1200px;
+  font-size:1.0em;
+  padding: 10px 60px;
+  margin: 20px 20px auto 20px;
+  border-radius: 6px;
+  background-image: linear-gradient(45deg, cyan, blue);
 }
 
 .Botoes__pagina0 IMG
 {
-    border: 0;
-    border-radius: 10px;
+  border: 0;
+  border-radius: 10px;
 }
 
 img
 {
-    border: 0;
+  border: 0;
 }
+
 .img_kit img
 {
   align-items: center;
@@ -169,29 +169,40 @@ img
   height: 300px;
 }
 
-.botãochart
-{
-    display: block;
-    align-items: center;
-    margin-bottom: auto 20px auto 20px;
-
-}
-
 .botão_chart
 {
     display: flex;
     justify-content: space-between;
 
-    border-radius: 10px;
-    width: 1200px;
+    width: 100%;
+    max-width: 1200px;
     height: 250px;
-    background-color: rgb(118,156,236);
+
     position: relative;
     float: left;
-    margin-top: 20px;
-    padding: 20px; 
-   
+    padding: 20px;
+    margin: 20px;
+    border-radius: 10px;
+    background-image: linear-gradient(45deg, cyan, blue);
 }
+
+.charts
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 100%;
+    max-width: 1200px;
+    height: 400px;
+
+    position: relative;
+    float: left;
+    margin: 20px;
+    border-radius: 10px;
+    background-image: linear-gradient(45deg, cyan, blue);
+}
+
 .autenticacao
 {
   width: 100vw;
@@ -353,44 +364,7 @@ color: blue;
 
 }
 
-.chart
-{
-    align-items: center;
-}
 
-.charts
-{
-    display: flex;
-    justify-content: space-between;
-    width: 1200px;
-    height: 300px;
-    background-color: rgb(100, 104, 200);
-    position: relative;
-    float: left;
-    margin-top: 20px;
-    border-radius: 10px;
-}
-
-.container1
-{
- display: flex;
- align-items: center;
- justify-content: space-between;
- width: 100%;
- max-width: 1200px;
- margin: auto 20px auto 150px;
- border-radius: 3px;
-}
-
-.container2
-{
-display: block;
- width: 100%;
- height: 300px;
- max-width: 1200px;
- margin: auto 20px auto 150px;
- border-radius: 3px;
-}
 
 .container3
 {
@@ -411,11 +385,13 @@ background-color: rgb(120,160,236);
 
 
 .temp_show {
+  max-width: 1200;
   color: #3711de;
   display: flex;
   position: space-between;
   font-size: 20px;
   text-align: center;
+  margin: 20px;
   padding: 5px;
   border-radius: 3px;
 }
