--- a/css/css.css
+++ b/css/css.css
@@ -67,7 +67,7 @@
   }
   a {
     font-size: 12px;
-    color: #ffffff;
+    color: #e60084;
   }
 
   input[type=submit] {
@@ -252,9 +252,9 @@ box-shadow: 5px 13px 6px -6px #148eee
   text-align: center;
   padding: 5px 15px;
   border-radius: 6px;
+  outline: none;
   border: bottom;
-  box-shadow: 5px 10px 6px -6px #148eee;
-
+ 
   
 }
 .autenticacao button
@@ -288,7 +288,7 @@ color: blue;
   align-items: center;
   justify-content: center;
   background-image: linear-gradient(45deg, cyan, blue);
-
+  outline: none;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 
@@ -308,32 +308,39 @@ color: blue;
   cursor: pointer;
 
   border-radius: 6px;
-  border: none;
-  box-shadow: 5px 13px 6px -6px #148eee;
+ 
 }
 .cad input{
   align-items: center;
-  background-color: #dddddd;
+  background-color: lightgray;
   font-weight: 600;
   font-size: 12px;
-  color: #148eee;
+  color: #ffffff;
   text-align: center;
   padding: 5px 15px;
   margin-top: 10px;
-  border-radius: 6px;
-  border: bottom;
-  box-shadow: 5px 10px 6px -6px #148eee;
+  border: none;
+  border-bottom: 2px solid #323232;
 }
+.cad input:focus{
+border-color: #1e64e7;
 
+}
+.cad #agreement, #agreement-label{
+display:inline-block;
+width: auto;
+font-size: 8px;
+
+}
 .cad label{
   font-family: Arial, Helvetica, sans-serif;
   align-items: center;
-  font-size: 18px;
+  font-size: 14px;
   border-radius: 6px;
   padding: 5px;
   margin: 20px 20px 10px 10px;
   color: lightgray;
-  background-color: gray;
+  background-color: #125082;
 
 }
 
