--- a/css/css.css
+++ b/css/css.css
@@ -71,7 +71,7 @@
   }
 
   input[type=submit] {
-    border: 2px solid #333333;
+    border: 2px solid black;
     border-radius: 5px;
     padding: 5px;
     width: 90px;
@@ -312,10 +312,10 @@ color: blue;
 }
 .cad input{
   align-items: center;
-  background-color: lightgray;
+  background-color: #16a4b8;
   font-weight: 600;
   font-size: 12px;
-  color: #ffffff;
+  color: #fffe57;
   text-align: center;
   padding: 5px 15px;
   margin-top: 10px;
@@ -339,8 +339,8 @@ font-size: 8px;
   border-radius: 6px;
   padding: 5px;
   margin: 20px 20px 10px 10px;
-  color: lightgray;
-  background-color: #125082;
+  color: #fffe57;
+  background-color: #888681
 
 }
 
