--- a/css/css.css
+++ b/css/css.css
@@ -319,10 +319,10 @@ color: blue;
 }
 .cad input{
   align-items: center;
-  background-color: #fffe57;
+  background-color: #ffff;
   font-weight: 600;
   font-size: 12px;
-  color: #fffe57;
+  color: rgb(10, 10, 100 );
   text-align: center;
   padding: 5px 15px;
   margin-top: 10px;
