--- a/css/css.css
+++ b/css/css.css
@@ -76,17 +76,29 @@
     padding: 5px;
     width: 90px;
   }
-  .msg {
+  
+input[type=image]{
+width: 50px;
+height: 50px;
+}
+
+img{
+  width: 60px;
+  height: 60px;
+}
+
+.msg {
     font-size: 18px;
     color: #333333;
     text-align: center;
     padding: 5px;
     border-radius: 3px;
   }
-  .msg label
+
+  label
   {
-  font-size: 36px;
-  color: #ffff;
+  font-size: 48px;
+  color: gray;
   text-align: center;
   padding: 5px;
   border-radius: 3px;
@@ -127,8 +139,8 @@
 {
   display: flex;
   margin-top: 5px;
-  width: 85px;
-  height: 85px;
+  width: 60px;
+  height: 60px;
 }
 #logo
 {
@@ -152,14 +164,14 @@
 {
   display: block;
   width: 1200px;
-  padding: 5px 5px 10px 10px;
+  padding: 5px 5px 5px 5px;
   height: 20px;
 }
 
 .secao__Botoes {
     display: flex;
     align-items: center;
-    margin: 20px;
+    margin: 10px;
   }
 
 .Botoes__pagina0
@@ -169,21 +181,17 @@
     
   width: 100%;
   max-width: 1200px;
-  font-size:1.0em;
   padding: 10px 60px;
-  margin: 20px 20px auto 20px;
+  margin: 5px 20px;
   border-radius: 6px;
   background-image: linear-gradient(45deg, cyan, blue);
 }
 
 .w_box{
-display: inline-flexbox;
+display: block;
+background-color: greenyellow;
+border-radius: 6px;
 
-}
-.Botoes__pagina0 
-{
-  border: 0;
-  border-radius: 10px;
 }
 
 #img_kit
@@ -196,6 +204,7 @@ display: inline-flexbox;
   width: 600px;
   height: 300px;
 }
+
 #pasta_btn{
 height:85px;
 width: 85px;
