--- a/css/css.css
+++ b/css/css.css
@@ -120,7 +120,8 @@ img{
  max-width: 1200px;
  margin: auto 20px auto 20px;
  border-radius: 3px;
- background-image: linear-gradient(45deg, cyan, blue);
+ background-image: linear-gradient(45deg,white, blue);
+ 
 }
 
 .botao_home
@@ -166,6 +167,7 @@ img{
   width: 1200px;
   padding: 5px 5px 5px 5px;
   height: 20px;
+  background-image: linear-gradient(45deg,white, blue);
 }
 
 .secao__Botoes {
@@ -184,23 +186,25 @@ img{
   padding: 10px 60px;
   margin: 5px 20px;
   border-radius: 6px;
-  background-image: linear-gradient(45deg, cyan, blue);
+  background-image: linear-gradient(45deg,white, blue);
 }
 
 .w_box{
-display: block;
-background-color: greenyellow;
+display: flex;
+background-color: white;
 border-radius: 10px;
+padding: 10px;
 
 }
 
 #img_kit
 {
-  align-items: center;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
   justify-content: center;
   
   position: relative;
-  text-align: center;
   width: 600px;
   height: 300px;
 }
@@ -299,8 +303,6 @@ box-shadow: 5px 13px 6px -6px #148eee
   border-radius: 6px;
   outline: none;
   border: bottom;
- 
-  
 }
 .autenticacao button
 {
@@ -446,7 +448,6 @@ color: blue;
 
 }
 
-
 .container3
 {
 display: block;
@@ -456,7 +457,6 @@ display: block;
  margin: auto 20px auto 150px;
  border-radius: 3px;
 }
-
 
 .thead th td 
 {
