--- a/css/css.css
+++ b/css/css.css
@@ -189,6 +189,22 @@ img{
   background-image: linear-gradient(45deg,white, blue);
 }
 
+.chart_1
+{
+  display: flex;
+  margin-left:auto;
+  margin-right: auto;
+  justify-content: center;
+  width: 100%;
+  max-width: 1200px;
+  height: 350px;
+  padding: 20px;
+    float: left;
+    margin: 20px;
+    border-radius: 10px;
+    background-image: linear-gradient(45deg, white, blue);
+}
+
 .w_box{
 display: flex;
 background-color: white;
@@ -228,7 +244,7 @@ width: 150px;
     padding: 20px;
     margin: 20px;
     border-radius: 10px;
-    background-image: linear-gradient(45deg, cyan, blue);
+    background-image: linear-gradient(45deg, white, blue);
 }
 
 .charts
@@ -245,7 +261,7 @@ width: 150px;
     float: left;
     margin: 20px;
     border-radius: 10px;
-    background-image: linear-gradient(45deg, cyan, blue);
+    background-image: linear-gradient(45deg, white, blue);
 }
 
 .autenticacao
@@ -256,7 +272,7 @@ width: 150px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: linear-gradient(45deg, cyan, blue);
+  background-image: linear-gradient(45deg, white, blue);
 
   font-family: Arial, Helvetica, sans-serif;
   text-transform: uppercase;
