--- a/css/css.css
+++ b/css/css.css
@@ -130,7 +130,7 @@ img{
     border-radius: 10px;
     width: 100%;
     max-width: 1200px;
-    height: 200px;
+    height: 150px;
     
     position: space-between;
     margin: auto 20px auto 20px;;
@@ -139,25 +139,26 @@ img{
 .home_btn
 {
   display: flex;
-  margin: 5px 30px 20px 10px;
+  margin: 5px 50px 10px 10px;
+  padding: 5px;
   width: 120px;
   height: 120px;
 }
 #logo
 {
   display: inline-block;
-  margin: 5px 1px 20px 10px;
-  width: 150px;
-  height: 150px;
+  margin: 20px 1px 10px 10px;
+  width: 100px;
+  height: 100px;
   padding: 5px 5px 10px 10px;
 
 }
 #logo_toi
 {
   display: inline-block;
-  margin: 25px 50px 1px 1px;
-  width:250px;
-  height: 100px;
+  margin: 45px 30px 1px 1px;
+  width:150px;
+  height: 55px;
   padding: 5px 5px 10px 10px;
 }
 
