--- a/css/css.css
+++ b/css/css.css
@@ -11,22 +11,23 @@
   h1 {
     font-size: 18px;
     text-align: center;
-    color: #ffffff;
-    background: rgb(85, 85, 150);
+    color: black;
+    background: white;
     border-radius: 7px 7px 0px 0px;
     padding: 7px 4px 0px 4px;
     margin: 0px;
+    border: #787878 solid 2px;
   }
   h2 {
     font-size: 12px;
     text-align: left;
-    color: #ffffff;
-    background: #787878;
+    color: black;
+    background: white;
     padding: 4px 8px 4px 8px;
     margin: 0px;
     border: #787878 solid 2px;
   }
-  h3 {
+h3 {
     font-size: 12px;
     text-align: left;
     font-weight: normal;
@@ -37,7 +38,7 @@
     border-radius: 10px;
   }
 
-  .table {
+.table {
     width: 100%;
     max-width:60px;
     display: inline-flexbox;
@@ -45,32 +46,40 @@
     padding: 20px;
     text-align: center;
     align-items: center;
+    border: #787878 solid 2px;
   }
-  th {
+th {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
     font-size: 16px;
     width: 100%;
-    color: #ffff;
-    background: gray;
+    max-width: 300px;
+    color: black;
+    background: #ffff;
     text-align: center;
     padding: 10px;
     border-radius: 3px 0px 0px 3px;
-  
+
+    border: #787878 solid 2px;
   }
-  td {
+td {
     width: 25px;
     font-size: 12px;
-    background: #768cec;
+    background: #ffff;
     padding: 5px;
    
   }
-  a {
+tbody{
+  color: black;
+  background: #ffff;
+  border: #787878 solid 2px;
+}
+a {
     font-size: 12px;
-    color: #00ff83;
+    color: blue;
   }
 
-  input[type=submit] {
+input[type=submit] {
     border: none;
     border-radius: 5px;
     padding: 5px;
@@ -248,8 +257,7 @@ width: 150px;
     background-image: linear-gradient(45deg, white, blue);
 }
 
-.charts
-{
+.charts{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -263,6 +271,20 @@ width: 150px;
     margin: 20px;
     border-radius: 10px;
     background-image: linear-gradient(45deg, white, blue);
+}
+.chart chart_1{
+  display: flex;
+  align-items: center;
+
+  width: 100%;
+  max-width: 1200px;
+  height: 400px;
+
+  position: relative;
+  float: left;
+  margin: 20px;
+  border-radius: 10px;
+  background-image: linear-gradient(45deg, white, blue);
 }
 
 .autenticacao
